--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -5,6 +5,12 @@ sp:
 spring:
   application:
     name: user-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: admin
+  
     
 server:
   port: 8101
